add pre css for line breaks

--- a/styles/style.css
+++ b/styles/style.css
@@ -219,3 +219,11 @@ img {
   vertical-align:top;
   float: left;
 }
+
+pre {
+  font-size: inherit;
+  color: inherit;
+  border: initial;
+  padding: initial;
+  font-family: inherit;
+  }
