--- a/styles/about.css
+++ b/styles/about.css
@@ -1,11 +1,17 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
 body{
     display: grid;
     grid-template-columns: 1fr; 
-    grid-auto-rows: auto .1fr;
+    grid-auto-rows: auto 1fr;
     grid-template-areas: "header" "title" "main_content" "footer";
     font-family: 'Open Sans', sans-serif;
-    margin: 2rem 6rem; 
-    height: 50vh;
+    height: 100vh;
 }
 
 header{
@@ -25,7 +31,7 @@ header{
 
 .main{
     grid-area: main_content;
-
+    padding: 0 2rem;
 }
 
 #title{
@@ -65,6 +71,10 @@ h1, h2{
 
 nav {
   display: flex; 
+  padding: 30px;
+  top: 0px;
+  width: 100%;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 }
 
 nav ul {
@@ -72,6 +82,8 @@ nav ul {
   margin: 0;
   padding: 0;
   display: flex; 
+  float: right;
+  width: 100%;
 }
 
 nav li {
@@ -83,8 +95,7 @@ nav li:last-child {
 }
 
 nav ul li a {
-  /* display: block; */
-  color: black;
+  color: rgb(0, 0, 0);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -93,7 +104,9 @@ nav ul li a {
 
 
 nav ul li a:hover{
-  text-decoration: underline;
+  color:#ffffff;
+  background: #005a83;
+  border-radius: 5px;
 }
 
 nav ul a:active{
