--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,16 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
 body{
     display: grid;
     grid-template-columns: 1fr; 
     grid-auto-rows: auto 1fr;
     grid-template-areas: "header" "title" "main_content" "footer";
     font-family: 'Open Sans', sans-serif;
-    margin: 2rem 6rem; 
     height: 100vh;
 }
 
@@ -16,7 +22,6 @@ header{
 #footer{
     padding-top: 50px;
     grid-area: footer;
-    
     text-align: center;
     width: 100%;
     color: black;
@@ -26,14 +31,13 @@ header{
 }
 
 
-
 .main{
     grid-area: main_content;
     grid-template-areas: "main_map panel";
     grid-template-columns: 2fr 1fr;
     display: grid;
     grid-gap: 5rem;
-
+    padding: 0 2rem;
 }
 
 #title{
@@ -51,6 +55,10 @@ h1, h2{
 
 nav {
     display: flex; 
+    padding: 30px;
+    top: 0px;
+    width: 100%;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
   }
 
   nav ul {
@@ -59,6 +67,7 @@ nav {
     padding: 0;
     display: flex; 
     float: right;
+    width: 100%;
   }
 
   nav li {
@@ -70,8 +79,7 @@ nav {
   }
 
   nav ul li a {
-    /* display: block; */
-    color: black;
+    color: rgb(0, 0, 0);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -80,7 +88,9 @@ nav {
 
 
   nav ul li a:hover{
-    text-decoration: underline;
+    color:#ffffff;
+    background: #005a83;
+    border-radius: 5px;
   }
 
   nav ul a:active{
@@ -206,12 +216,6 @@ nav {
   margin: 2px; 
 }
 
- #theSurvey{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-} 
-
 /* make logo fit nav bar */
 img {
   height: 70px;
@@ -219,15 +223,6 @@ img {
   vertical-align:top;
   float: left;
 }
-
-/* pre {
-  font-size: inherit;
-  color: inherit;
-  border: initial;
-  padding: initial;
-  font-family: inherit;
-  white-space: pre-wrap;
-  } */
 
 #stories {
   white-space: pre-wrap;
