readme, nav, logo

--- a/styles/about.css
+++ b/styles/about.css
@@ -75,16 +75,17 @@ h1, h2{
 
 nav {
   display: flex; 
-  padding: 30px;
+  flex-direction: row;
   top: 0px;
   width: 100%;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  background-color: #005a83;
 }
 
 nav ul {
   list-style-type: none; 
   margin: 0;
-  padding: 0;
+  padding: 30px;
   display: flex; 
   float: right;
   width: 100%;
@@ -99,7 +100,7 @@ nav li:last-child {
 }
 
 nav ul li a {
-  color: rgb(0, 0, 0);
+  color: rgb(192, 207, 220);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -109,13 +110,13 @@ nav ul li a {
 
 nav ul li a:hover{
   color:#ffffff;
-  background: #005a83;
-  border-radius: 5px;
+  transition: 0.3s ease;
 }
 
 nav ul a:active{
   font-weight: bold;
 }
+
 
 
  /* #theSurvey{
@@ -124,8 +125,14 @@ nav ul a:active{
 
 /* make logo fit nav bar */
 img {
-  height: 70px;
-  margin: 0;
+  width: 150px;
+  /* height: 70px; */
+  margin: 0; 
   vertical-align:top;
-  float: left;
+  padding: 20px;
+}
+
+.header-logo {
+  margin-right: auto;
+  padding-right: 20px;
 }
